--- a/app/views/partials/coord_plani/navbar.html
+++ b/app/views/partials/coord_plani/navbar.html
@@ -19,7 +19,7 @@
 			    </a>
 					        
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="/coord_plani/plani_eval">Planificar</a>
+					<a class="dropdown-item" href="/coord_plani/plani_eval" disabled="true">Planificar</a>
 					<a class="dropdown-item" href="/coord_plani/eval_encurso">En Curso</a>
 					<a class="dropdown-item" href="/coord_plani/eval_culminado">Culminada</a>
 				</div>
@@ -33,10 +33,5 @@
 		<ul class="navbar-nav navbar-right">
       		<li><a href="/logout" class="btn btn-outline-success"><span class="glyphicon glyphicon-log-in"></span><i class="fa fa-sign-out"></i> Logout</a></li>
 		</ul>
-			    
-		<!--<form class="form-inline my-2 my-lg-0">
-			<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-			<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-		</form>-->
 	</div>
 </nav>
