Cambiando la forma de crear los instrumentos (Coord. Ev)

--- a/app/views/coord_ev/instrumento/home.html
+++ b/app/views/coord_ev/instrumento/home.html
@@ -70,11 +70,11 @@
 														Instrumentos de Evaluación Existentes	
 													</p>
 												</div>
-												<div class="col-md-3 text-right">
+												<!--<div class="col-md-3 text-right">
 													<a href="/coord_ev/addInstrumento" data-toggle="tooltip" data-placement="right" title="Nuevo Instrumento">
 														<i class="fa fa-plus-circle fa-2x" aria-hidden="true"></i>
 													</a>
-												</div>
+												</div>-->
 											</div>
 										</div>
 										<table class="table">
